--- a/popup.css
+++ b/popup.css
@@ -1,44 +1,142 @@
-    body {
-      font-family: Arial, sans-serif;
-      width: 250px;
-      margin: 0;
-      padding: 10px;
-    }
-    h1 {
-      display: flex;
-      align-items: center;
-      font-size: 18px;
-      margin-bottom: 20px;
-    }
-    h1 img {
-      width: 20px;
-      margin-right: 10px;
-    }
-    .tags-container {
-      margin-bottom: 15px;
-    }
-    .tag {
-      background-color: #007bff;
-      color: white;
-      padding: 5px;
-      border-radius: 5px;
-      margin: 5px;
-      display: inline-block;
-    }
-    .tag button {
-      background: transparent;
-      border: none;
-      color: white;
-      font-weight: bold;
-      margin-left: 5px;
-      cursor: pointer;
-    }
-    #addTagButton {
-      background-color: #28a745;
-      color: white;
-      padding: 10px;
-      border-radius: 5px;
-      width: 100%;
-      cursor: pointer;
-    }
-  
+body {
+  font-family: Arial, sans-serif;
+  width: 250px;
+  margin: 0;
+  padding: 10px;
+}
+
+h1 {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+h1 img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+.container {
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+
+.tags-container, .whitelisted-container, .blacklisted-container {
+  margin-bottom: 15px;
+  padding: 8px;
+  border-radius: 10px;
+  background-color: rgb(65, 67, 67);
+  color: rgb(247, 247, 247);
+  opacity: 0.9;
+}
+
+.actions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 5px;
+}
+
+.action-link {
+  color: #f8f893;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.action-button {
+  background-color: #3ace5d;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.tag, .channel {
+  background-color: #007bff;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 15px;
+  margin: 5px;
+  display: flex;
+  gap: 6px;
+  font-size: 12px;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.tag button, .channel button {
+  background: red;
+  border: none;
+  color:  rgb(65, 67, 67);
+  font-size: 12px;
+  cursor: pointer;
+  padding:  2px 6px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-content {
+  background: #f5f2f2;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 400px;
+  width: 90%;
+  display: flex;
+  gap:5px;
+  flex-direction: column;
+  border-radius: 5px;
+}
+
+.modal-header {
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+
+.modal-close {
+  float: right;
+  cursor: pointer;
+}
+
+.whitelisted-channels-list,
+.blacklisted-channels-list,
+.tags-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  max-height: 40px;
+  overflow-y: scroll;
+}
+
+
+.dialog-savebutton, .dialog-closebutton{
+  cursor:pointer;
+  padding: 2px 1px;
+ 
+  border-radius: 5px;
+}
+
+.dialog-closebutton{
+  border: red;
+  background-color: rgb(243, 127, 127);
+}
+
+.dialog-savebutton{
+ border: #3ace5d;
+  background-color: greenyellow;
+}
