--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(99, 83, 83) !important;
-  color: white !important;
+  background-color: rgba(137, 169, 140, 1) !important;
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
@@ -18,3 +17,43 @@
   text-align: center !important;
 }
 
+.detoxify-overlay img{
+  width: 5rem;
+  height: auto;
+}
+
+.detoxify-overlay.loading-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.detoxify-overlay.error-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(255, 0, 0, 0.7);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
